--- a/package.json
+++ b/package.json
@@ -51,16 +51,21 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": ">=10.0"
+    "node": ">=12.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
+    "coveralls": "^3.1.1",
     "dot": "^1.1.3",
-    "eslint": "^8.3.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-node": "^11.1.0",
     "jsdoc": "^4.0.2",
     "keypress": "^0.2.1",
     "mocha": "^10.0.0",
     "nimble": "^0.0.2",
     "nyc": "^15.1.0"
-  }
+  },
+  "types": ""
 }
