--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -97,6 +97,9 @@
         "es6": true,
         "ecmaVersion": 2021,
         "project": ["./tsconfig.json"]
+      },
+      "rules": {
+        "object-curly-spacing": ["error", "always"]
       }
     }
   ]
